--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -42,7 +42,9 @@ backend kube_api
 {% if not (bootstrap_gone | default(false)) %}
     server bootstrap bootstrap.{{ cluster_name }}.{{ parent_domain }}:6443 check
 {% endif %}
-    server master master.{{ cluster_name }}.{{ parent_domain }}:6443 check
+    server master0 master0.{{ cluster_name }}.{{ parent_domain }}:6443 check
+    server master1 master1.{{ cluster_name }}.{{ parent_domain }}:6443 check
+    server master2 master2.{{ cluster_name }}.{{ parent_domain }}:6443 check
 
 frontend machine_config
     bind 0.0.0.0:22623
@@ -54,7 +56,9 @@ backend machine_config
 {% if not (bootstrap_gone | default(false)) %}
     server bootstrap bootstrap.{{ cluster_name }}.{{ parent_domain }}:22623 check
 {% endif %}
-    server master master.{{ cluster_name }}.{{ parent_domain }}:22623 check
+    server master0 master0.{{ cluster_name }}.{{ parent_domain }}:22623 check
+    server master1 master1.{{ cluster_name }}.{{ parent_domain }}:22623 check
+    server master2 master2.{{ cluster_name }}.{{ parent_domain }}:22623 check
 
 frontend router_https
     bind 0.0.0.0:443
@@ -64,7 +68,7 @@ backend router_https
     balance roundrobin
     option ssl-hello-chk
     server worker1 worker1.{{ cluster_name }}.{{ parent_domain }}:443 check
-    server worker2 worker2.{{ cluster_name }}.{{ parent_domain }}:443 check
+    server worker0 worker0.{{ cluster_name }}.{{ parent_domain }}:443 check
 
 frontend router_http
     mode http
@@ -76,5 +80,5 @@ frontend router_http
 backend router_http
     mode http
     server worker1 worker1.{{ cluster_name }}.{{ parent_domain }}:80 check
-    server worker2 worker2.{{ cluster_name }}.{{ parent_domain }}:80 check
+    server worker0 worker0.{{ cluster_name }}.{{ parent_domain }}:80 check
 
