--- a/templates/haproxy.cfg.j2
+++ b/templates/haproxy.cfg.j2
@@ -67,8 +67,9 @@ frontend router_https
 backend router_https
     balance roundrobin
     option ssl-hello-chk
-    server worker1 worker1.{{ cluster_name }}.{{ parent_domain }}:443 check
-    server worker0 worker0.{{ cluster_name }}.{{ parent_domain }}:443 check
+    server master1 master1.{{ cluster_name }}.{{ parent_domain }}:443 check
+    server master0 master0.{{ cluster_name }}.{{ parent_domain }}:443 check
+    server master2 master2.{{ cluster_name }}.{{ parent_domain }}:443 check
 
 frontend router_http
     mode http
@@ -79,6 +80,7 @@ frontend router_http
 
 backend router_http
     mode http
-    server worker1 worker1.{{ cluster_name }}.{{ parent_domain }}:80 check
-    server worker0 worker0.{{ cluster_name }}.{{ parent_domain }}:80 check
+    server services services.{{ parent_domain }}:8081 check
+#    server worker1 worker1.{{ cluster_name }}.{{ parent_domain }}:80 check
+#    server worker0 worker0.{{ cluster_name }}.{{ parent_domain }}:80 check
 
