--- a/templates/named-ocp-dns.zone.j2
+++ b/templates/named-ocp-dns.zone.j2
@@ -40,8 +40,9 @@ etcd-2          IN      A                       {{ vms['master2'].ipaddr }}
 worker0         IN      A                       {{ vms['worker0'].ipaddr }}
 worker1         IN      A                       {{ vms['worker1'].ipaddr }}
 
-workers         IN      A                       {{ vms['worker0'].ipaddr }}
-workers         IN      A                       {{ vms['worker1'].ipaddr }}
+workers         IN      A                       {{ vms['master0'].ipaddr }}
+workers         IN      A                       {{ vms['master1'].ipaddr }}
+workers         IN      A                       {{ vms['master2'].ipaddr }}
 
 api             IN      CNAME                   services.{{ parent_domain }}.
 api-int         IN      CNAME                   services.{{ parent_domain }}.
@@ -55,5 +56,6 @@ _etcd-server-ssl IN     SRV 0 10 2380           etcd-2.{{ cluster_name }}.{{ par
 
 $ORIGIN apps.{{ cluster_name }}.{{ parent_domain }}.
 
+nexus-common    IN      CNAME                   services.{{ parent_domain }}.
 *               IN      CNAME                   workers.{{ cluster_name }}.{{ parent_domain }}.
 
