--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -2,9 +2,10 @@
 {% if create_proxy_config | default(false) %}
     ServerName lb.{{ parent_domain }}
     ServerAlias *.{{ cluster_name }}.{{ parent_domain }}
+    AllowEncodedSlashes NoDecode
 
-    ProxyPass / http://localhost:81/
-    ProxyPassReverse / http://localhost:81/
+    ProxyPass / http://localhost:8081/ nocanon
+    ProxyPassReverse / http://localhost:8081/
 
     ErrorLog "logs/proxy-error.log"
     LogLevel info
